@@ -2,6 +2,7 @@
 
 	* gameswf/gameswf_text.cpp: fixed ~edit_text_character()
 	on_event(event_id::KILLFOCUS) bug
+	* gameswf/gameswf_button.cpp: a bit cleanup
 	
 2007-02-24  Vitaly Alexeev <tishka92@yahoo.com>
 
